--- a/index.html
+++ b/index.html
@@ -7,5 +7,14 @@
   <body>
     <h1>Allyson J.M. Gaylord</h1>
     <p>408 Spencer Ave.<br>P.O. Box 152<br>Pierce, CO 80650<br><strong>(970)451-1712<br>alyg93@gmail.com</strong></p>
+
+    <h1>Experience</h1>
+    <h4>August 2016 - February 2018</h4>
+    <h3>Blackjack Pizza, Greeley, CO - Delivery Driver</h3>
+    <ul>
+      <li>Cashiering.</li>
+      <li>Planning routes for deliveries.</li>
+      <li>Customer Service skills.</li>
+    </ul>
   </body>
 </html>
