--- a/index.html
+++ b/index.html
@@ -4,10 +4,13 @@
     <meta charset="utf-8">
     <title>Resume</title>
   </head>
+  <link rel="stylesheet" href="C:\Users\Academy\Documents\resume1\css\style.css">
   <body>
-    <h1>Allyson J.M. Gaylord</h1>
+    <div>
+      <div class="myAddress">
+    <h1 class="myName">Allyson J.M. Gaylord</h1>
     <p>408 Spencer Ave.<br>P.O. Box 152<br>Pierce, CO 80650<br><strong>(970)451-1712<br>alyg93@gmail.com</strong></p>
-
+</div>
     <h1>Experience</h1>
     <h4>August 2016 - February 2018</h4>
     <h3>Blackjack Pizza, Greeley, CO - Delivery Driver</h3>
@@ -16,5 +19,16 @@
       <li>Planning routes for deliveries.</li>
       <li>Customer Service skills.</li>
     </ul>
+      <h4>March 2015 - August 2016</h4>
+      <h3>Life Wireless. Covington, GA. - Field Rep.</h3>
+      <ul>
+        <li>Greet customers and ascertain what each customer wants or needs.</li>
+    </ul>
+    <h4>April 2016 - September 2016</h4>
+    <h3>Fairfield Inn, Loveland, CO. - Housekeeper</h3>
+    <ul>
+      <li>Fast paced environment, get things done quickly and correctly.</li>
+    </ul>
+  </div>
   </body>
 </html>
