--- a/index.html
+++ b/index.html
@@ -1,34 +1,62 @@
 <!DOCTYPE html>
 <html>
+
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="C:\Users\Academy\Documents\resume1\css\style.css">
     <title>Resume</title>
   </head>
-  <link rel="stylesheet" href="C:\Users\Academy\Documents\resume1\css\style.css">
+
   <body>
-    <div>
-      <div class="myAddress">
-    <h1 class="myName">Allyson J.M. Gaylord</h1>
-    <p>408 Spencer Ave.<br>P.O. Box 152<br>Pierce, CO 80650<br><strong>(970)451-1712<br>alyg93@gmail.com</strong></p>
-</div>
-    <h1>Experience</h1>
-    <h4>August 2016 - February 2018</h4>
-    <h3>Blackjack Pizza, Greeley, CO - Delivery Driver</h3>
-    <ul>
-      <li>Cashiering.</li>
-      <li>Planning routes for deliveries.</li>
-      <li>Customer Service skills.</li>
-    </ul>
-      <h4>March 2015 - August 2016</h4>
-      <h3>Life Wireless. Covington, GA. - Field Rep.</h3>
-      <ul>
-        <li>Greet customers and ascertain what each customer wants or needs.</li>
-    </ul>
-    <h4>April 2016 - September 2016</h4>
-    <h3>Fairfield Inn, Loveland, CO. - Housekeeper</h3>
-    <ul>
-      <li>Fast paced environment, get things done quickly and correctly.</li>
-    </ul>
-  </div>
+    <header class="myAddress">
+      <h1 class="myName">Allyson J.M. Gaylord</h1>
+        <p>408 Spencer Ave. P.O. Box 152 Pierce, CO 80650 | <strong>(970)451-1712 | alyg93@gmail.com</strong></p>
+    </header>
+
+    <section class="objective">
+      <h1>Objective</h1>
+        <p class="center">To establish myself as an entry level developer</p>
+    </section>
+
+    <section class="experienceSection">
+      <h1>Experience</h1>
+
+        <h4>August 2016 - February 2018</h4>
+        <h3>Blackjack Pizza Greeley, CO - Delivery Driver</h3>
+          <ul>
+            <li>Cashiering</li>
+            <li>Planning routes for deliveries</li>
+            <li>Customer Service skills</li>
+          </ul>
+
+        <h4>March 2015 - August 2016</h4>
+        <h3>Life Wireless Covington, GA - Field Rep</h3>
+          <ul>
+            <li>Greet customers and ascertain what each customer wants or needs</li>
+          </ul>
+
+        <h4>April 2016 - September 2016</h4>
+        <h3>Fairfield Inn Loveland, CO - Housekeeper</h3>
+          <ul>
+            <li>Fast paced environment, get things done quickly and correctly</li>
+          </ul>
+
+    </section>
+
+    <section>
+      <h1>Techtonic Group</h1>
+        <ul>
+          <li>Currently undergoing 10 weeks of training</li>
+        </ul>
+      <h1>FreeCodeCamp</h1>
+        <ul>
+          <li>Completed over 30 hours in HTML/CSS/JavaScript</li>
+        </ul>
+    </section>
+
+    <footer>
+      <p>Something should go here</p>
+    </footer>
+
   </body>
 </html>
