--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   </head>
 
   <body>
-    <header class="myAddress">
-      <h1 class="myName">Allyson J.M. Gaylord</h1>
+    <header>
+      <h1>Allyson J.M. Gaylord</h1>
         <p>408 Spencer Ave. P.O. Box 152 Pierce, CO 80650 | <strong>(970)451-1712 | alyg93@gmail.com</strong></p>
     </header>
 
-    <section class="objective">
+    <section class="center">
       <h1>Objective</h1>
-        <p class="center">To establish myself as an entry level developer</p>
+        <p>To establish myself as an entry level developer</p>
     </section>
 
-    <section class="experienceSection">
+    <section>
       <h1>Experience</h1>
 
         <h4>August 2016 - February 2018</h4>
@@ -44,17 +44,17 @@
     </section>
 
     <section>
-      <h1>Techtonic Group</h1>
+      <h3>Techtonic Group</h3>
         <ul>
           <li>Currently undergoing 10 weeks of training</li>
         </ul>
-      <h1>FreeCodeCamp</h1>
+      <h3>FreeCodeCamp</h3>
         <ul>
           <li>Completed over 30 hours in HTML/CSS/JavaScript</li>
         </ul>
     </section>
 
-    <footer>
+    <footer class="center">
       <p>Something should go here</p>
     </footer>
 
