Changed text in footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </section>
 
     <footer class="center">
-      <p>Something should go here</p>
+      <p>Resume developed by Ally Gaylord</p>
     </footer>
 
   </body>
