--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <h1>Experience</h1>
 
         <h4>August 2016 - February 2018</h4>
-        <h3>Blackjack Pizza Greeley, CO - Delivery Driver</h3>
+        <h3>Blackjack Pizza - Delivery Driver</h3>
           <ul>
             <li>Cashiering</li>
             <li>Planning routes for deliveries</li>
@@ -30,13 +30,13 @@
           </ul>
 
         <h4>March 2015 - August 2016</h4>
-        <h3>Life Wireless Covington, GA - Field Rep</h3>
+        <h3>Life Wireless - Field Rep</h3>
           <ul>
             <li>Greet customers and ascertain what each customer wants or needs</li>
           </ul>
 
         <h4>April 2016 - September 2016</h4>
-        <h3>Fairfield Inn Loveland, CO - Housekeeper</h3>
+        <h3>Fairfield Inn - Housekeeper</h3>
           <ul>
             <li>Fast paced environment, get things done quickly and correctly</li>
           </ul>
