--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="C:\Users\Academy\Documents\resume1\css\style.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css\style.css">
     <title>Resume</title>
   </head>
 
@@ -55,7 +56,7 @@
     </section>
 
     <footer class="center">
-      <p>Resume developed by Ally Gaylord</p>
+      <p>Resume developed by Allyson Gaylord</p>
     </footer>
 
   </body>
