--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css\style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Resume</title>
   </head>
 
@@ -20,24 +20,27 @@
     </section>
 
     <section>
-      <h1>Experience</h1>
+      <h1 class="border">Experience</h1>
 
-        <h4>August 2016 - February 2018</h4>
+
         <h3>Blackjack Pizza - Delivery Driver</h3>
+        <h4>August 2016 - February 2018</h4>
           <ul>
             <li>Cashiering</li>
             <li>Planning routes for deliveries</li>
             <li>Customer Service skills</li>
           </ul>
 
-        <h4>March 2015 - August 2016</h4>
+
         <h3>Life Wireless - Field Rep</h3>
+        <h4>March 2015 - August 2016</h4>
           <ul>
             <li>Greet customers and ascertain what each customer wants or needs</li>
           </ul>
 
-        <h4>April 2016 - September 2016</h4>
+
         <h3>Fairfield Inn - Housekeeper</h3>
+        <h4>April 2016 - September 2016</h4>
           <ul>
             <li>Fast paced environment, get things done quickly and correctly</li>
           </ul>
@@ -46,6 +49,7 @@
 
     <section>
       <h3>Techtonic Group</h3>
+      <h4>February 2018 - Present</h4>
         <ul>
           <li>Currently undergoing 10 weeks of training</li>
         </ul>
