Changed colors of h3's and h4's

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <header>
+    <header class="center">
       <h1>Allyson J.M. Gaylord</h1>
         <p>408 Spencer Ave. P.O. Box 152 Pierce, CO 80650 | <strong>(970)451-1712 | alyg93@gmail.com</strong></p>
     </header>
