put in navigation list, styled elements

--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title></title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
-    <title></title>
   </head>
-  <body>
 
+  <body>
+    <div>
+      <header>
+        <h3>Unity</h3>
+        <nav>
+          <ul>
+            <li><a href="main">Home</a></li>
+            <li><a href="aboutus">About Us</a></li>
+            <li><a href="services">Services</a></li>
+            <li><a href="portfolio">Portfolio</a></li>
+            <li><a href="blog">Blog</a></li>
+            <li><a href="shop">Shop</a></li>
+          </ul>
+        </nav>
+      </header>
+<h1>Honor The Details.</h1>
+<h2>We bring your products or services across in ways<br>
+that make people feel good as they engage with your business.</h2>
+  </div>
   </body>
 </html>
