added background pictures, some text and styling

--- a/index.html
+++ b/index.html
@@ -8,23 +8,60 @@
   </head>
 
   <body>
-    <div>
+    <section class="firstPage">
+
       <header>
-        <h3>Unity</h3>
+        <h3 class="unity">Unity</h3>
         <nav>
-          <ul>
-            <li><a href="main">Home</a></li>
-            <li><a href="aboutus">About Us</a></li>
-            <li><a href="services">Services</a></li>
-            <li><a href="portfolio">Portfolio</a></li>
-            <li><a href="blog">Blog</a></li>
-            <li><a href="shop">Shop</a></li>
+          <ul class="list-one">
+            <li><a href="javascript:void(0);">Home</a></li>
+            <li><a href="javascript:void(0);">About Us</a></li>
+            <li><a href="javascript:void(0);">Services</a></li>
+            <li><a href="javascript:void(0);">Portfolio</a></li>
+            <li><a href="javascript:void(0);">Blog</a></li>
+            <li><a href="javascript:void(0);">Shop</a></li>
           </ul>
         </nav>
+
+
       </header>
-<h1>Honor The Details.</h1>
-<h2>We bring your products or services across in ways<br>
-that make people feel good as they engage with your business.</h2>
-  </div>
+      <nav class="sidebar">
+        <a href="javascript:void(0);"><img class="phoneicon" src="../../photoshopLayers/phoneicon.png"</a>
+        <ul>
+          <li><a href="javascript:void(0);">Facebook</a></li>
+          <li><a href="javascript:void(0);">Twitter</a></li>
+          <li><a href="javascript:void(0);">Instagram</a></li>
+          <li><a href="javascript:void(0);">Youtube</a></li>
+        </ul>
+      </nav>
+      <section class="overlay">
+        <h1 class="honor">Honor The Details.</h1>
+        <h2>We bring your products or services across in ways<br>
+          that make people feel good as they engage with your business.</h2>
+      </section>
+    </section>
+
+  <section class="secondPage">
+    <h1>Invites<br>active attention</h1>
+    <h4>That's why we invent, and build digital campaigns</h4>
+    <h2>Complexity<br>should be<br>secret</h2>
+    <p>We know you have a story to tell. You want the world to embrace your<br>
+    incredible idead, products, and services. Trouble is, you're not sure about the<br>
+    best way to get your message across. No problem. We do.</p>
+    <h4>Handmade Layouts</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+      Nulla sagittis diam nisl,<br>fermentum varius nisl fringilla sit amet</p>
+    <h4>Creative Designs</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
+      Integer egestas purus tortor, eu bibendum leo viverra quis.<br>
+      Sed at metus nec sem molestie cursus quis a velit.</p>
+      <h4>100% Support</h4>
+      <p> Curabitur quis sapien justo. Aenean nec ante vitae metus<br>
+        tristique gravida ut a erat. Aenean tempus egestas urna,<br>
+        eu feugiat est interdum in.</p>
+  </section>
+  <section>
+    
+  </section>
   </body>
 </html>
