positioned images and text

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
 
       </header>
-      <nav class="sidebar">
         <a href="javascript:void(0);"><img class="phoneicon" src="../../photoshopLayers/phoneicon.png"</a>
+      <nav class="sidebar">
         <ul>
           <li><a href="javascript:void(0);">Facebook</a></li>
           <li><a href="javascript:void(0);">Twitter</a></li>
@@ -34,34 +34,51 @@
           <li><a href="javascript:void(0);">Youtube</a></li>
         </ul>
       </nav>
-      <section class="overlay">
-        <h1 class="honor">Honor The Details.</h1>
-        <h2>We bring your products or services across in ways<br>
+        <h1 class="honor white">Honor The Details.</h1>
+        <h2 class="first-line">We bring your products or services across in ways
           that make people feel good as they engage with your business.</h2>
-      </section>
+
     </section>
 
   <section class="secondPage">
-    <h1>Invites<br>active attention</h1>
-    <h4>That's why we invent, and build digital campaigns</h4>
-    <h2>Complexity<br>should be<br>secret</h2>
-    <p>We know you have a story to tell. You want the world to embrace your<br>
-    incredible idead, products, and services. Trouble is, you're not sure about the<br>
+    <h1 class="white ">Invites<br>active attention</h1>
+    <h4 class="white invent">That's why we invent, and build digital campaigns</h4>
+  <div class="stretch">
+    <h2 class="complex">Complexity should be secret</h2>
+    <p class="paragraph wedo">We know you have a story to tell. You want the world to embrace your
+    incredible idead, products, and services. Trouble is, you're not sure about the
     best way to get your message across. No problem. We do.</p>
-    <h4>Handmade Layouts</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-      Nulla sagittis diam nisl,<br>fermentum varius nisl fringilla sit amet</p>
-    <h4>Creative Designs</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br>
-      Integer egestas purus tortor, eu bibendum leo viverra quis.<br>
+  </div>
+  <div>
+  <div class="align">
+    <div class="lefty column">
+      <h4>Handmade Layouts</h4>
+      <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      Nulla sagittis diam nisl, fermentum varius nisl fringilla sit amet</p>
+    </div>
+    <div class="middle column">
+      <h4>Creative Designs</h4>
+      <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+      Integer egestas purus tortor, eu bibendum leo viverra quis.
       Sed at metus nec sem molestie cursus quis a velit.</p>
+    </div>
+    <div class="righty column">
       <h4>100% Support</h4>
-      <p> Curabitur quis sapien justo. Aenean nec ante vitae metus<br>
-        tristique gravida ut a erat. Aenean tempus egestas urna,<br>
+      <p class="paragraph"> Curabitur quis sapien justo. Aenean nec ante vitae metus
+        tristique gravida ut a erat. Aenean tempus egestas urna,
         eu feugiat est interdum in.</p>
+        <img class="line1" src="../../photoshopLayers/orangeline.png" alt="">
+        <img class="line2" src="" alt="">
+    </div>
+    </div>
+  </div>
   </section>
-  <section>
-    
+  <section class="thirdPage">
+
+    <h1>We love our clients</h1>
+    <p>We take pride in delivering Intelligent Designs and Engaging Experiences for<br>
+    clients all over the world.</p>
+
   </section>
   </body>
 </html>
