added "scroll" area

--- a/index.html
+++ b/index.html
@@ -1,84 +1,85 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title></title>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
 
-  <body>
-    <section class="firstPage">
+<head>
+  <title></title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
-      <header>
-        <h3 class="unity">Unity</h3>
-        <nav>
-          <ul class="list-one">
-            <li><a href="javascript:void(0);">Home</a></li>
-            <li><a href="javascript:void(0);">About Us</a></li>
-            <li><a href="javascript:void(0);">Services</a></li>
-            <li><a href="javascript:void(0);">Portfolio</a></li>
-            <li><a href="javascript:void(0);">Blog</a></li>
-            <li><a href="javascript:void(0);">Shop</a></li>
-          </ul>
-        </nav>
+<body>
+  <section class="first">
 
-
-      </header>
-        <a href="javascript:void(0);"><img class="phoneicon" src="../../photoshopLayers/phoneicon.png"</a>
-      <nav class="sidebar">
-        <ul>
-          <li><a href="javascript:void(0);">Facebook</a></li>
-          <li><a href="javascript:void(0);">Twitter</a></li>
-          <li><a href="javascript:void(0);">Instagram</a></li>
-          <li><a href="javascript:void(0);">Youtube</a></li>
+    <header>
+      <h3 class="unity">Unity</h3>
+      <nav>
+        <ul class="list-one">
+          <li><a href="javascript:void(0);">Home</a></li>
+          <li><a href="javascript:void(0);">About Us</a></li>
+          <li><a href="javascript:void(0);">Services</a></li>
+          <li><a href="javascript:void(0);">Portfolio</a></li>
+          <li><a href="javascript:void(0);">Blog</a></li>
+          <li><a href="javascript:void(0);">Shop</a></li>
         </ul>
       </nav>
-        <h1 class="honor white">Honor The Details.</h1>
-        <h2 class="first-line">We bring your products or services across in ways
-          that make people feel good as they engage with your business.</h2>
+    </header>
+    <a href="javascript:void(0);"><img class="phoneicon" src="../../photoshopLayers/phoneicon.png"</a>
+    <nav class="sidebar">
+      <ul>
+        <li><a href="javascript:void(0);">Facebook</a></li>
+        <li><a href="javascript:void(0);">Twitter</a></li>
+        <li><a href="javascript:void(0);">Instagram</a></li>
+        <li><a href="javascript:void(0);">Youtube</a></li>
+      </ul>
+    </nav>
+    <h1 class="honor white">Honor The Details.</h1>
+    <h2 class="first-line">We bring your products or services across in ways that make people feel good as they engage with your business.</h2>
+    <img class="scroll" src="../../photoshopLayers/scroll.png" alt="">
+    <p class="whitescroll">Scroll</p>
 
-    </section>
+  </section>
 
-  <section class="secondPage">
+  <section class="second">
     <h1 class="white ">Invites<br>active attention</h1>
     <h4 class="white invent">That's why we invent, and build digital campaigns</h4>
-  <div class="stretch">
-    <h2 class="complex">Complexity should be secret</h2>
-    <p class="paragraph wedo">We know you have a story to tell. You want the world to embrace your
-    incredible idead, products, and services. Trouble is, you're not sure about the
-    best way to get your message across. No problem. We do.</p>
-  </div>
-  <div>
-  <div class="align">
-    <div class="lefty column">
-      <h4>Handmade Layouts</h4>
-      <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Nulla sagittis diam nisl, fermentum varius nisl fringilla sit amet</p>
+    <div class="stretch">
+      <h2 class="complex">Complexity should be secret</h2>
+      <p class="white wedo">We know you have a story to tell. You want the world to embrace your incredible idead, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
     </div>
-    <div class="middle column">
-      <h4>Creative Designs</h4>
-      <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Integer egestas purus tortor, eu bibendum leo viverra quis.
-      Sed at metus nec sem molestie cursus quis a velit.</p>
+    <div>
+      <div class="align">
+        <div class="lefty column">
+          <h4>Handmade Layouts</h4>
+          <p class="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis diam nisl, fermentum varius nisl fringilla sit amet</p>
+        </div>
+        <div class="middle column">
+          <h4>Creative Designs</h4>
+          <p class="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas purus tortor, eu bibendum leo viverra quis. Sed at metus nec sem molestie cursus quis a velit.</p>
+        </div>
+        <div class="righty column">
+          <h4>100% Support</h4>
+          <p class="white"> Curabitur quis sapien justo. Aenean nec ante vitae metus tristique gravida ut a erat. Aenean tempus egestas urna, eu feugiat est interdum in.</p>
+          <img class="line1" src="../../photoshopLayers/orangeline.png" alt="">
+          <img class="line2" src="../../photoshopLayers/dash.png" alt="">
+        </div>
+      </div>
     </div>
-    <div class="righty column">
-      <h4>100% Support</h4>
-      <p class="paragraph"> Curabitur quis sapien justo. Aenean nec ante vitae metus
-        tristique gravida ut a erat. Aenean tempus egestas urna,
-        eu feugiat est interdum in.</p>
-        <img class="line1" src="../../photoshopLayers/orangeline.png" alt="">
-        <img class="line2" src="" alt="">
-    </div>
-    </div>
-  </div>
   </section>
-  <section class="thirdPage">
+  <section class="third">
 
-    <h1>We love our clients</h1>
-    <p>We take pride in delivering Intelligent Designs and Engaging Experiences for<br>
-    clients all over the world.</p>
+    <h1 class="p3">We love our clients</h1>
+    <p class="p3">We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
+    <img class="play" src="../../photoshopLayers/playbutton.png" alt="">
 
   </section>
-  </body>
+  <section class="fourth">
+
+  </section>
+
+  <section class="fifth">
+
+  </section>
+</body>
+
 </html>
