added more icons

--- a/index.html
+++ b/index.html
@@ -33,33 +33,42 @@
         <li><a href="javascript:void(0);">Youtube</a></li>
       </ul>
     </nav>
-    <h1 class="honor white">Honor The Details.</h1>
+    <h1 class="honor">Honor The Details.</h1>
     <h2 class="first-line">We bring your products or services across in ways that make people feel good as they engage with your business.</h2>
     <img class="scroll" src="../../photoshopLayers/scroll.png" alt="">
     <p class="whitescroll">Scroll</p>
+    <img class="downarrow" src="../../photoshopLayers/downarrow.png" alt="">
+    <img class="box" src="../../photoshopLayers/whitebox.png" alt="">
+      <img class="uno" src="../../photoshopLayers/01.png" alt="">
+
 
   </section>
-
   <section class="second">
-    <h1 class="white ">Invites<br>active attention</h1>
-    <h4 class="white invent">That's why we invent, and build digital campaigns</h4>
+      <h1 class="white">Invites<br>active attention</h1>
+        <h4 class="invent">That's why we invent, and build digital campaigns</h4>
     <div class="stretch">
       <h2 class="complex">Complexity should be secret</h2>
-      <p class="white wedo">We know you have a story to tell. You want the world to embrace your incredible idead, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
+      <p class="wedo">We know you have a story to tell. You want the world to embrace your incredible idead, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
     </div>
     <div>
       <div class="align">
         <div class="lefty column">
+          <img class="icon1" src="../../photoshopLayers/handmade.png" alt="">
           <h4>Handmade Layouts</h4>
-          <p class="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis diam nisl, fermentum varius nisl fringilla sit amet</p>
+          <img class="underline" src="../../photoshopLayers/underline.png" alt="">
+          <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis diam nisl, fermentum varius nisl fringilla sit amet</p>
         </div>
         <div class="middle column">
+          <img class="icon2" src="../../photoshopLayers/creative.png" alt="">
           <h4>Creative Designs</h4>
-          <p class="white">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas purus tortor, eu bibendum leo viverra quis. Sed at metus nec sem molestie cursus quis a velit.</p>
+          <img class="underline" src="../../photoshopLayers/underline.png" alt="">
+          <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas purus tortor, eu bibendum leo viverra quis. Sed at metus nec sem molestie cursus quis a velit.</p>
         </div>
         <div class="righty column">
+          <img class="icon3" src="../../photoshopLayers/support.png" alt="">
           <h4>100% Support</h4>
-          <p class="white"> Curabitur quis sapien justo. Aenean nec ante vitae metus tristique gravida ut a erat. Aenean tempus egestas urna, eu feugiat est interdum in.</p>
+          <img class="underline" src="../../photoshopLayers/underline.png" alt="">
+          <p class="column2"> Curabitur quis sapien justo. Aenean nec ante vitae metus tristique gravida ut a erat. Aenean tempus egestas urna, eu feugiat est interdum in.</p>
           <img class="line1" src="../../photoshopLayers/orangeline.png" alt="">
           <img class="line2" src="../../photoshopLayers/dash.png" alt="">
         </div>
