fixed some positioning, messed up other stuff

--- a/index.html
+++ b/index.html
@@ -39,13 +39,14 @@
     <p class="whitescroll">Scroll</p>
     <img class="downarrow" src="../../photoshopLayers/downarrow.png" alt="">
     <img class="box" src="../../photoshopLayers/whitebox.png" alt="">
-      <img class="uno" src="../../photoshopLayers/01.png" alt="">
+    <img class="uno" src="../../photoshopLayers/01.png" alt="">
+    <img class="brush" src="../../photoshopLayers/brush-box.png" alt="">
 
 
   </section>
   <section class="second">
-      <h1 class="white">Invites<br>active attention</h1>
-        <h4 class="invent">That's why we invent, and build digital campaigns</h4>
+    <h1 class="white">Invites<br>active attention</h1>
+    <h4 class="invent">That's why we invent, and build digital campaigns</h4>
     <div class="stretch">
       <h2 class="complex">Complexity should be secret</h2>
       <p class="wedo">We know you have a story to tell. You want the world to embrace your incredible idead, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
@@ -83,7 +84,9 @@
 
   </section>
   <section class="fourth">
-
+    <img class="blackbox" src="../../photoshopLayers/blackbox.png" alt="">
+    <h1 class="detail">Honor the details</h1>
+    <p class="four">For the global service design network</p>
   </section>
 
   <section class="fifth">
