kyle fixed stuff for me

--- a/index.html
+++ b/index.html
@@ -9,89 +9,94 @@
 </head>
 
 <body>
-  <section class="first">
+  <div class="container">
+    <section class="first">
 
-    <header>
-      <h3 class="unity">Unity</h3>
-      <nav>
-        <ul class="list-one">
-          <li><a href="javascript:void(0);">Home</a></li>
-          <li><a href="javascript:void(0);">About Us</a></li>
-          <li><a href="javascript:void(0);">Services</a></li>
-          <li><a href="javascript:void(0);">Portfolio</a></li>
-          <li><a href="javascript:void(0);">Blog</a></li>
-          <li><a href="javascript:void(0);">Shop</a></li>
+      <header>
+        <h3 class="unity">Unity</h3>
+        <nav>
+          <ul class="list-one">
+            <li><a href="javascript:void(0);">Home</a></li>
+            <li><a href="javascript:void(0);">About Us</a></li>
+            <li><a href="javascript:void(0);">Services</a></li>
+            <li><a href="javascript:void(0);">Portfolio</a></li>
+            <li><a href="javascript:void(0);">Blog</a></li>
+            <li><a href="javascript:void(0);">Shop</a></li>
+          </ul>
+        </nav>
+      </header>
+      <a href="javascript:void(0);"><img class="phoneicon" src="../../photoshopLayers/phoneicon.png"</a>
+      <nav class="sidebar">
+        <ul>
+          <li><a href="javascript:void(0);">Facebook</a></li>
+          <li><a href="javascript:void(0);">Twitter</a></li>
+          <li><a href="javascript:void(0);">Instagram</a></li>
+          <li><a href="javascript:void(0);">Youtube</a></li>
         </ul>
       </nav>
-    </header>
-    <a href="javascript:void(0);"><img class="phoneicon" src="../../photoshopLayers/phoneicon.png"</a>
-    <nav class="sidebar">
-      <ul>
-        <li><a href="javascript:void(0);">Facebook</a></li>
-        <li><a href="javascript:void(0);">Twitter</a></li>
-        <li><a href="javascript:void(0);">Instagram</a></li>
-        <li><a href="javascript:void(0);">Youtube</a></li>
-      </ul>
-    </nav>
-    <h1 class="honor">Honor The Details.</h1>
-    <h2 class="first-line">We bring your products or services across in ways that make people feel good as they engage with your business.</h2>
-    <img class="scroll" src="../../photoshopLayers/scroll.png" alt="">
-    <p class="whitescroll">Scroll</p>
-    <img class="downarrow" src="../../photoshopLayers/downarrow.png" alt="">
-    <img class="box" src="../../photoshopLayers/whitebox.png" alt="">
-    <img class="uno" src="../../photoshopLayers/01.png" alt="">
-    <img class="brush" src="../../photoshopLayers/brush-box.png" alt="">
+      <h1 class="honor">Honor The Details.</h1>
+      <h2 class="first-line">We bring your products or services across in ways that make people feel good as they engage with your business.</h2>
+      <img class="scroll" src="../../photoshopLayers/scroll.png" alt="">
+      <p class="whitescroll">Scroll</p>
+      <img class="downarrow" src="../../photoshopLayers/downarrow.png" alt="">
+      <img class="box" src="../../photoshopLayers/whitebox.png" alt="">
+      <img class="uno" src="../../photoshopLayers/01.png" alt="">
+      <img class="brush" src="../../photoshopLayers/brush-box.png" alt="">
 
 
-  </section>
-  <section class="second">
-    <h1 class="white">Invites<br>active attention</h1>
-    <h4 class="invent">That's why we invent, and build digital campaigns</h4>
-    <div class="stretch">
-      <h2 class="complex">Complexity should be secret</h2>
-      <p class="wedo">We know you have a story to tell. You want the world to embrace your incredible idead, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
-    </div>
-    <div>
-      <div class="align">
-        <div class="lefty column">
-          <img class="icon1" src="../../photoshopLayers/handmade.png" alt="">
-          <h4>Handmade Layouts</h4>
-          <img class="underline" src="../../photoshopLayers/underline.png" alt="">
-          <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis diam nisl, fermentum varius nisl fringilla sit amet</p>
-        </div>
-        <div class="middle column">
-          <img class="icon2" src="../../photoshopLayers/creative.png" alt="">
-          <h4>Creative Designs</h4>
-          <img class="underline" src="../../photoshopLayers/underline.png" alt="">
-          <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas purus tortor, eu bibendum leo viverra quis. Sed at metus nec sem molestie cursus quis a velit.</p>
-        </div>
-        <div class="righty column">
-          <img class="icon3" src="../../photoshopLayers/support.png" alt="">
-          <h4>100% Support</h4>
-          <img class="underline" src="../../photoshopLayers/underline.png" alt="">
-          <p class="column2"> Curabitur quis sapien justo. Aenean nec ante vitae metus tristique gravida ut a erat. Aenean tempus egestas urna, eu feugiat est interdum in.</p>
-          <img class="line1" src="../../photoshopLayers/orangeline.png" alt="">
-          <img class="line2" src="../../photoshopLayers/dash.png" alt="">
+    </section>
+    <section class="second">
+      <h1 class="white">Invites<br>active attention</h1>
+      <h4 class="invent">That's why we invent, and build digital campaigns</h4>
+      <div class="stretch">
+        <h2 class="complex">Complexity should be secret</h2>
+        <p class="wedo">We know you have a story to tell. You want the world to embrace your incredible idead, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
+      </div>
+      <div>
+        <div class="align">
+          <div class="lefty column">
+            <img class="icon1" src="../../photoshopLayers/handmade.png" alt="">
+            <h4>Handmade Layouts</h4>
+            <img class="underline" src="../../photoshopLayers/underline.png" alt="">
+            <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis diam nisl, fermentum varius nisl fringilla sit amet</p>
+          </div>
+          <div class="middle column">
+            <img class="icon2" src="../../photoshopLayers/creative.png" alt="">
+            <h4>Creative Designs</h4>
+            <img class="underline" src="../../photoshopLayers/underline.png" alt="">
+            <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas purus tortor, eu bibendum leo viverra quis. Sed at metus nec sem molestie cursus quis a velit.</p>
+          </div>
+          <div class="righty column">
+            <img class="icon3" src="../../photoshopLayers/support.png" alt="">
+            <h4>100% Support</h4>
+            <img class="underline" src="../../photoshopLayers/underline.png" alt="">
+            <p class="column2"> Curabitur quis sapien justo. Aenean nec ante vitae metus tristique gravida ut a erat. Aenean tempus egestas urna, eu feugiat est interdum in.</p>
+            <img class="line1" src="../../photoshopLayers/orangeline.png" alt="">
+            <img class="line2" src="../../photoshopLayers/dash.png" alt="">
+          </div>
         </div>
       </div>
-    </div>
-  </section>
-  <section class="third">
+    </section>
+    <section class="third">
 
-    <h1 class="p3">We love our clients</h1>
-    <p class="p3">We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
-    <img class="play" src="../../photoshopLayers/playbutton.png" alt="">
+      <h1 class="p3">We love our clients</h1>
+      <p class="p3">We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
+      <img class="play" src="../../photoshopLayers/playbutton.png" alt="">
 
-  </section>
-  <section class="fourth">
-    <img class="blackbox" src="../../photoshopLayers/blackbox.png" alt="">
-    <h1 class="detail">Honor the details</h1>
-    <p class="four">For the global service design network</p>
-  </section>
+    </section>
+    <section class="fourth">
+      <img class="blackbox" src="../../photoshopLayers/blackbox.png" alt="">
+      <h1 class="detail">Honor the details</h1>
+      <p class="four">For the global service design network</p>
+    </section>
 
-  <section class="fifth">
-
-  </section>
+    <section class="fifth">
+      <h1 class="global">Global company with a local feel</h1>
+      <p class="five">We help forward-thinking clients succeed in digital culture with work that invites active attention</p>
+      <img class="blackline" src="../../photoshopLayers/blackline.png" alt="">
+      <p class="reviews">What our customers are saying</p>
+    </section>
+  </div>
 </body>
 
 </html>
