--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
       <header>
         <h3 class="unity">Unity</h3>
-        <nav>
+        <nav class="firstnav">
           <ul class="list-one">
             <li><a href="javascript:void(0);">Home</a></li>
-            <li><a href="javascript:void(0);">About Us</a></li>
+            <li class="aboutus"><a href="javascript:void(0);">About Us</a></li>
             <li><a href="javascript:void(0);">Services</a></li>
             <li><a href="javascript:void(0);">Portfolio</a></li>
             <li><a href="javascript:void(0);">Blog</a></li>
@@ -34,20 +34,24 @@
           <li><a href="javascript:void(0);">Youtube</a></li>
         </ul>
       </nav>
-      <h1 class="honor">Honor The Details.</h1>
-      <h2 class="first-line">We bring your products or services across in ways that make people feel good as they engage with your business.</h2>
-      <img class="scroll" src="../../photoshopLayers/scroll.png" alt="">
-      <p class="whitescroll">Scroll</p>
-      <img class="downarrow" src="../../photoshopLayers/downarrow.png" alt="">
+      <div>
+        <h1 class="honor">Honor The Details.</h1>
+        <h2 class="first-line">We bring your products or services across in ways that make people feel good as they engage with your business.</h2>
+      </div>
+      <div>
+        <img class="scroll" src="../photoshopLayers/scroll.png" alt="">
+        <p class="whitescroll">Scroll</p>
+        <img class="downarrow" src="../../photoshopLayers/downarrow.png" alt="">
+      </div>
       <img class="box" src="../../photoshopLayers/whitebox.png" alt="">
-      <img class="uno" src="../../photoshopLayers/01.png" alt="">
       <img class="brush" src="../../photoshopLayers/brush-box.png" alt="">
-
-
     </section>
+
     <section class="second">
-      <h1 class="white">Invites<br>active attention</h1>
-      <h4 class="invent">That's why we invent, and build digital campaigns</h4>
+      <div>
+        <h1 class="white">Invites<br>active attention</h1>
+        <h4 class="invent">That's why we invent, and build digital campaigns</h4>
+      </div>
       <div class="stretch">
         <h2 class="complex">Complexity should be secret</h2>
         <p class="wedo">We know you have a story to tell. You want the world to embrace your incredible idead, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
@@ -65,37 +69,64 @@
             <h4>Creative Designs</h4>
             <img class="underline" src="../../photoshopLayers/underline.png" alt="">
             <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas purus tortor, eu bibendum leo viverra quis. Sed at metus nec sem molestie cursus quis a velit.</p>
+            <img class="line1" src="../../photoshopLayers/orangeline.png" alt="">
+            <img class="line2" src="../../photoshopLayers/dash.png" alt="">
           </div>
           <div class="righty column">
             <img class="icon3" src="../../photoshopLayers/support.png" alt="">
             <h4>100% Support</h4>
             <img class="underline" src="../../photoshopLayers/underline.png" alt="">
             <p class="column2"> Curabitur quis sapien justo. Aenean nec ante vitae metus tristique gravida ut a erat. Aenean tempus egestas urna, eu feugiat est interdum in.</p>
-            <img class="line1" src="../../photoshopLayers/orangeline.png" alt="">
-            <img class="line2" src="../../photoshopLayers/dash.png" alt="">
           </div>
         </div>
       </div>
     </section>
     <section class="third">
-
-      <h1 class="p3">We love our clients</h1>
-      <p class="p3">We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
-      <img class="play" src="../../photoshopLayers/playbutton.png" alt="">
-
+      <div>
+        <h1 class="p3">We love our clients</h1>
+        <p class="p3">We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
+        <img class="play" src="../../photoshopLayers/playbutton.png" alt="">
+      </div>
     </section>
     <section class="fourth">
-      <img class="blackbox" src="../../photoshopLayers/blackbox.png" alt="">
-      <h1 class="detail">Honor the details</h1>
-      <p class="four">For the global service design network</p>
+      <div>
+        <img class="blackbox" src="../../photoshopLayers/blackbox.png" alt="">
+        <h1 class="detail">Honor the details</h1>
+      </div>
+      <div>
+        <img class="frame" src="../photoshopLayers/03Frame.png" alt="">
+        <p class="four">For the global service design network</p>
+      </div>
     </section>
 
     <section class="fifth">
-      <h1 class="global">Global company with a local feel</h1>
-      <p class="five">We help forward-thinking clients succeed in digital culture with work that invites active attention</p>
-      <img class="blackline" src="../../photoshopLayers/blackline.png" alt="">
-      <p class="reviews">What our customers are saying</p>
+      <div class="fif">
+        <h1 class="global">Global company with a local feel</h1>
+        <p class="five">We help forward-thinking clients succeed in digital culture with work that invites active attention</p>
+        <img class="blackline" src="../../photoshopLayers/blackline.png" alt="">
+        <p class="reviews">What our customers are saying</p>
+      </div>
+      <div class="stars">
+        <div class="left area">
+          <p>"Thanks so much for the awesome customer service. So many companies, large and small, have a lot to learn from you. Great job!"</p>
+        </div>
+        <div class="center area">
+          <p>"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
+        </div>
+        <div class="right area">
+          <p>"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
+        </div>
+      </div>
     </section>
+    <footer class="footer">
+      <div>
+        <h3 class="unity2">Unity</h3>
+        <img class="tinyphone" src="../../photoshopLayers/tinyphone.png" alt="">
+        <p class="foot">0800 456 789</p>
+        <img class="mail" src="../../photoshopLayers/mail.png" alt="">
+        
+      </div>
+    </footer>
   </div>
 </body>
 
