trying to get things positioned correctly, having a hard time with margins so using relative positioning but only where I feel I need to

--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
       <img class="box" src="../../photoshopLayers/whitebox.png" alt="">
       <img class="brush" src="../../photoshopLayers/brush-box.png" alt="">
     </section>
-
     <section class="second">
       <div>
         <h1 class="white">Invites<br>active attention</h1>
@@ -54,9 +53,8 @@
       </div>
       <div class="stretch">
         <h2 class="complex">Complexity should be secret</h2>
-        <p class="wedo">We know you have a story to tell. You want the world to embrace your incredible idead, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
+        <p class="wedo">We know you have a story to tell. You want the world to embrace your incredible ideas, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
       </div>
-      <div>
         <div class="align">
           <div class="lefty column">
             <img class="icon1" src="../../photoshopLayers/handmade.png" alt="">
@@ -69,8 +67,6 @@
             <h4>Creative Designs</h4>
             <img class="underline" src="../../photoshopLayers/underline.png" alt="">
             <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas purus tortor, eu bibendum leo viverra quis. Sed at metus nec sem molestie cursus quis a velit.</p>
-            <img class="line1" src="../../photoshopLayers/orangeline.png" alt="">
-            <img class="line2" src="../../photoshopLayers/dash.png" alt="">
           </div>
           <div class="righty column">
             <img class="icon3" src="../../photoshopLayers/support.png" alt="">
@@ -79,7 +75,10 @@
             <p class="column2"> Curabitur quis sapien justo. Aenean nec ante vitae metus tristique gravida ut a erat. Aenean tempus egestas urna, eu feugiat est interdum in.</p>
           </div>
         </div>
-      </div>
+        <div class="lines">
+          <img class="line1" src="../../photoshopLayers/orangeline.png" alt="">
+          <img class="line2" src="../../photoshopLayers/dash.png" alt="">
+        </div>
     </section>
     <section class="third">
       <div>
@@ -124,7 +123,7 @@
         <img class="tinyphone" src="../../photoshopLayers/tinyphone.png" alt="">
         <p class="foot">0800 456 789</p>
         <img class="mail" src="../../photoshopLayers/mail.png" alt="">
-        
+
       </div>
     </footer>
   </div>
