--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="font" href="assignments/css/fonts.zip">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
     <section class="first">
 
       <header>
-        <h3 class="unity">Unity</h3>
+        <h3 class="unity gotham">Unity</h3>
         <nav class="firstnav">
           <ul class="list-one">
             <li><a href="javascript:void(0);">Home</a></li>
@@ -47,10 +48,12 @@
       <img class="brush" src="../../photoshopLayers/brush-box.png" alt="">
     </section>
     <section class="second">
+
       <div>
-        <h1 class="white">Invites<br>active attention</h1>
+        <h1 class="white">Invites active attention</h1>
         <h4 class="invent">That's why we invent, and build digital campaigns</h4>
       </div>
+
       <div class="stretch">
         <h2 class="complex">Complexity should be secret</h2>
         <p class="wedo">We know you have a story to tell. You want the world to embrace your incredible ideas, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
@@ -82,44 +85,59 @@
     </section>
     <section class="third">
       <div>
-        <h1 class="p3">We love our clients</h1>
-        <p class="p3">We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
-        <img class="play" src="../../photoshopLayers/playbutton.png" alt="">
+        <h1 class="p3 love">We love our clients</h1>
+        <p class="p3 pride">We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
+        <img class="play" src="../photoshopLayers/roundbutton.png" alt="">
       </div>
     </section>
     <section class="fourth">
-      <div>
+
         <img class="blackbox" src="../../photoshopLayers/blackbox.png" alt="">
         <h1 class="detail">Honor the details</h1>
-      </div>
-      <div>
-        <img class="frame" src="../photoshopLayers/03Frame.png" alt="">
         <p class="four">For the global service design network</p>
-      </div>
+
     </section>
 
     <section class="fifth">
       <div class="fif">
-        <h1 class="global">Global company with a local feel</h1>
+        <h1 class="global">Global company with a local feel.</h1>
         <p class="five">We help forward-thinking clients succeed in digital culture with work that invites active attention</p>
         <img class="blackline" src="../../photoshopLayers/blackline.png" alt="">
         <p class="reviews">What our customers are saying</p>
       </div>
       <div class="stars">
         <div class="left area">
+        <div>
+          <img src="../photoshopLayers/greg.png" alt="">
+          <img src="../photoshopLayers/left-stars.png" alt="">
+        </div>
           <p>"Thanks so much for the awesome customer service. So many companies, large and small, have a lot to learn from you. Great job!"</p>
+          <p class="name">Gregory Bradley</p>
+          <p>New York - USA</p>
         </div>
         <div class="center area">
+        <div>
+          <img src="../photoshopLayers/jonathan.png" alt="">
+          <img src="../photoshopLayers/center-stars.png" alt="">
+        </div>
           <p>"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
+          <p class="name">Jonathan Kraus</p>
+          <p>Berlin - Germany</p>
         </div>
         <div class="right area">
+        <div>
+          <img src="../photoshopLayers/caroline.png" alt="">
+          <img src="../photoshopLayers/right-stars.png" alt="">
+        </div>
           <p>"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
+          <p class="name">Caroline De Smet</p>
+          <p>Brussels - Belgium</p>
         </div>
       </div>
     </section>
     <footer class="footer">
       <div>
-        <h3 class="unity2">Unity</h3>
+        <h3 class="unity2 gotham">Unity</h3>
         <img class="tinyphone" src="../../photoshopLayers/tinyphone.png" alt="">
         <p class="foot">0800 456 789</p>
         <img class="mail" src="../../photoshopLayers/mail.png" alt="">
