--- a/index.html
+++ b/index.html
@@ -5,28 +5,31 @@
   <title></title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/css/fonts.css">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="font" href="assignments/css/fonts.zip">
 </head>
 
 <body>
-  <div class="container">
-    <section class="first">
 
-      <header>
-        <h3 class="unity gotham">Unity</h3>
-        <nav class="firstnav">
-          <ul class="list-one">
-            <li><a href="javascript:void(0);">Home</a></li>
-            <li class="aboutus"><a href="javascript:void(0);">About Us</a></li>
-            <li><a href="javascript:void(0);">Services</a></li>
-            <li><a href="javascript:void(0);">Portfolio</a></li>
-            <li><a href="javascript:void(0);">Blog</a></li>
-            <li><a href="javascript:void(0);">Shop</a></li>
-          </ul>
-        </nav>
-      </header>
-      <a href="javascript:void(0);"><img class="phoneicon" src="../../photoshopLayers/phoneicon.png"</a>
+  <section class="first">
+
+    <div>
+      <a href="javascript:void(0);"><img class="phoneicon" src="../photoshopLayers/phoneicon.png"</a>
+    </div>
+
+    <header>
+      <h3 class="firstnav">Unity</h3>
+      <nav class="firstnav">
+        <ul class="list-one">
+          <li><a href="javascript:void(0);">Home</a></li>
+          <li class="aboutus"><a href="javascript:void(0);">About Us</a></li>
+          <li><a href="javascript:void(0);">Services</a></li>
+          <li><a href="javascript:void(0);">Portfolio</a></li>
+          <li><a href="javascript:void(0);">Blog</a></li>
+          <li><a href="javascript:void(0);">Shop</a></li>
+        </ul>
+      </nav>
+
       <nav class="sidebar">
         <ul>
           <li><a href="javascript:void(0);">Facebook</a></li>
@@ -35,116 +38,133 @@
           <li><a href="javascript:void(0);">Youtube</a></li>
         </ul>
       </nav>
-      <div>
-        <h1 class="honor">Honor The Details.</h1>
-        <h2 class="first-line">We bring your products or services across in ways that make people feel good as they engage with your business.</h2>
-      </div>
-      <div>
-        <img class="scroll" src="../photoshopLayers/scroll.png" alt="">
-        <p class="whitescroll">Scroll</p>
-        <img class="downarrow" src="../../photoshopLayers/downarrow.png" alt="">
-      </div>
-      <img class="box" src="../../photoshopLayers/whitebox.png" alt="">
-      <img class="brush" src="../../photoshopLayers/brush-box.png" alt="">
-    </section>
-    <section class="second">
 
-      <div>
-        <h1 class="white">Invites active attention</h1>
-        <h4 class="invent">That's why we invent, and build digital campaigns</h4>
+    </header>
+
+    <div class="honor">
+      <h1>Honor The Details.</h1>
+      <h2>We bring your products or services across in ways that make people feel good as they engage with your business.</h2>
+    </div>
+
+    <div class="scroll">
+      <img class="arch" src="../photoshopLayers/scroll.png" alt="">
+      <p>Scroll</p>
+      <img class="downarrow" src="../photoshopLayers/downarrow.png" alt="">
+    </div>
+
+  </section>
+
+
+  <section class="second">
+
+    <div class="invite-text">
+      <h1>Invites active attention</h1>
+      <h4>That's why we invent, and build digital campaigns</h4>
+    </div>
+
+    <div class="stretch">
+      <h2>Complexity should be secret</h2>
+      <p>We know you have a story to tell. You want the world to embrace your incredible ideas, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
+    </div>
+
+    <div class="align">
+
+      <div class="lefty column">
+        <img class="icon1" src="../../photoshopLayers/handmade.png" alt="">
+        <h4>Handmade Layouts</h4>
+        <img class="underline" src="../../photoshopLayers/underline.png" alt="">
+        <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis diam nisl, fermentum varius nisl fringilla sit amet</p>
       </div>
 
-      <div class="stretch">
-        <h2 class="complex">Complexity should be secret</h2>
-        <p class="wedo">We know you have a story to tell. You want the world to embrace your incredible ideas, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
+      <div class="middle column">
+        <img class="icon2" src="../../photoshopLayers/creative.png" alt="">
+        <h4>Creative Designs</h4>
+        <img class="underline" src="../../photoshopLayers/underline.png" alt="">
+        <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas purus tortor, eu bibendum leo viverra quis. Sed at metus nec sem molestie cursus quis a velit.</p>
       </div>
-        <div class="align">
-          <div class="lefty column">
-            <img class="icon1" src="../../photoshopLayers/handmade.png" alt="">
-            <h4>Handmade Layouts</h4>
-            <img class="underline" src="../../photoshopLayers/underline.png" alt="">
-            <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis diam nisl, fermentum varius nisl fringilla sit amet</p>
-          </div>
-          <div class="middle column">
-            <img class="icon2" src="../../photoshopLayers/creative.png" alt="">
-            <h4>Creative Designs</h4>
-            <img class="underline" src="../../photoshopLayers/underline.png" alt="">
-            <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas purus tortor, eu bibendum leo viverra quis. Sed at metus nec sem molestie cursus quis a velit.</p>
-          </div>
-          <div class="righty column">
-            <img class="icon3" src="../../photoshopLayers/support.png" alt="">
-            <h4>100% Support</h4>
-            <img class="underline" src="../../photoshopLayers/underline.png" alt="">
-            <p class="column2"> Curabitur quis sapien justo. Aenean nec ante vitae metus tristique gravida ut a erat. Aenean tempus egestas urna, eu feugiat est interdum in.</p>
-          </div>
-        </div>
-        <div class="lines">
-          <img class="line1" src="../../photoshopLayers/orangeline.png" alt="">
-          <img class="line2" src="../../photoshopLayers/dash.png" alt="">
-        </div>
-    </section>
-    <section class="third">
-      <div>
-        <h1 class="p3 love">We love our clients</h1>
-        <p class="p3 pride">We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
-        <img class="play" src="../photoshopLayers/roundbutton.png" alt="">
+
+      <div class="righty column">
+        <img class="icon3" src="../../photoshopLayers/support.png" alt="">
+        <h4>100% Support</h4>
+        <img class="underline" src="../../photoshopLayers/underline.png" alt="">
+        <p class="column2"> Curabitur quis sapien justo. Aenean nec ante vitae metus tristique gravida ut a erat. Aenean tempus egestas urna, eu feugiat est interdum in.</p>
       </div>
-    </section>
-    <section class="fourth">
+    </div>
 
-        <img class="blackbox" src="../../photoshopLayers/blackbox.png" alt="">
-        <h1 class="detail">Honor the details</h1>
-        <p class="four">For the global service design network</p>
+    <div class="lines">
+      <img class="line1" src="../photoshopLayers/orangeline.png" alt="">
+      <img class="line2" src="../photoshopLayers/dash.png" alt="">
+    </div>
+  </section>
 
-    </section>
+  <section class="third">
 
-    <section class="fifth">
-      <div class="fif">
-        <h1 class="global">Global company with a local feel.</h1>
-        <p class="five">We help forward-thinking clients succeed in digital culture with work that invites active attention</p>
-        <img class="blackline" src="../../photoshopLayers/blackline.png" alt="">
-        <p class="reviews">What our customers are saying</p>
-      </div>
-      <div class="stars">
-        <div class="left area">
+    <div class="p3">
+      <h1 class="pride">We love our clients</h1>
+      <p class="pride">We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
+    </div>
+  </section>
+
+  <section class="fourth">
+
+    <div class="details">
+      <h1>Honor the details</h1>
+      <p>For the global service design network</p>
+    </div>
+
+  </section>
+
+  <section class="fifth">
+
+    <div class="fif">
+      <h1>Global company with a local feel.</h1>
+      <h2>We help forward-thinking clients succeed in digital culture with work that invites active attention</h2>
+      <p>What our customers are saying</p>
+    </div>
+
+    <div class="stars">
+
+      <div class="left area">
         <div>
           <img src="../photoshopLayers/greg.png" alt="">
           <img src="../photoshopLayers/left-stars.png" alt="">
         </div>
-          <p>"Thanks so much for the awesome customer service. So many companies, large and small, have a lot to learn from you. Great job!"</p>
-          <p class="name">Gregory Bradley</p>
-          <p>New York - USA</p>
-        </div>
-        <div class="center area">
+
+        <p>"Thanks so much for the awesome customer service. So many companies, large and small, have a lot to learn from you. Great job!"</p>
+        <h4>Gregory Bradley</h6>
+          <p class="grey">New York - USA</p>
+      </div>
+
+      <div class="center area">
         <div>
           <img src="../photoshopLayers/jonathan.png" alt="">
           <img src="../photoshopLayers/center-stars.png" alt="">
         </div>
-          <p>"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
-          <p class="name">Jonathan Kraus</p>
-          <p>Berlin - Germany</p>
-        </div>
-        <div class="right area">
+
+        <p>"A great agency who are not only flexible, efficient and professional but a group of people who really care about delivering results for you."</p>
+        <h4>Jonathan Kraus</h4>
+        <p class="jon">Berlin - Germany</p>
+      </div>
+
+      <div class="right area">
         <div>
           <img src="../photoshopLayers/caroline.png" alt="">
           <img src="../photoshopLayers/right-stars.png" alt="">
         </div>
-          <p>"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
-          <p class="name">Caroline De Smet</p>
-          <p>Brussels - Belgium</p>
-        </div>
-      </div>
-    </section>
-    <footer class="footer">
-      <div>
-        <h3 class="unity2 gotham">Unity</h3>
-        <img class="tinyphone" src="../../photoshopLayers/tinyphone.png" alt="">
-        <p class="foot">0800 456 789</p>
-        <img class="mail" src="../../photoshopLayers/mail.png" alt="">
 
+        <p>"The quality of product and more importantly, customer service provided means we keep coming back for more!"</p>
+        <h4>Caroline De Smet</h4>
+        <p class="grey">Brussels - Belgium</p>
       </div>
-    </footer>
-  </div>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div>
+      <h3 class="gotham">Unity</h3>
+      <p>0800 456 789</p>
+    </div>
+  </footer>
 </body>
 
 </html>
