styled first section and top part of second section

--- a/index.html
+++ b/index.html
@@ -52,15 +52,21 @@
       <img class="downarrow" src="../photoshopLayers/downarrow.png" alt="">
     </div>
 
+    <div class="pics">
+      <img class="uno" src="../photoshopLayers/01.png" alt="">
+      <img class="box" src="../photoshopLayers/whitebox.png" alt="">
+    </div>
+
   </section>
 
-
   <section class="second">
-
     <div class="invite-text">
-      <h1>Invites active attention</h1>
+      <h1>Invites</h1>
+      <h1>active attention</h1>
       <h4>That's why we invent, and build digital campaigns</h4>
     </div>
+
+    <img class="brush-box" src="../photoshopLayers/brush-box.png" alt="">
 
     <div class="stretch">
       <h2>Complexity should be secret</h2>
