finishing up the third section, renaming sections for better readability, got rid of some random space that was to the right, touching up fonts that I've got so far

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-  <section class="first">
+  <section class="kiss">
 
     <div>
       <a href="javascript:void(0);"><img class="phoneicon" src="../photoshopLayers/phoneicon.png"</a>
@@ -60,7 +60,7 @@
 
   </section>
 
-  <section class="second">
+  <section class="purpley">
     <div class="invite-text">
       <h1>Invites</h1>
       <h1>active attention</h1>
@@ -71,30 +71,38 @@
 
     <div class="stretch">
       <h2>Complexity should be secret</h2>
-      <p>We know you have a story to tell. You want the world to embrace your incredible ideas, products, and services. Trouble is, you're not sure about the best way to get your message across. No problem. We do.</p>
+      <p>We know you have a story to tell. You want the world to embrace your</p>
+      <p>incredible ideas, products, and services. Trouble is, you're not sure about the</p>
+      <p>best way to get your message across. No problem. We do.</p>
     </div>
 
     <div class="align">
 
       <div class="lefty column">
-        <img class="icon1" src="../../photoshopLayers/handmade.png" alt="">
+        <img class="icon1" src="../photoshopLayers/handmade.png" alt="">
         <h4>Handmade Layouts</h4>
-        <img class="underline" src="../../photoshopLayers/underline.png" alt="">
-        <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla sagittis diam nisl, fermentum varius nisl fringilla sit amet</p>
+        <img class="underline" src="../photoshopLayers/underline.png" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur fermentum</p>
+        <p>adipiscing elit. Nulla sagittis diam nisl,</p>
+        <p> varius nisl fringilla sit amet</p>
       </div>
 
       <div class="middle column">
-        <img class="icon2" src="../../photoshopLayers/creative.png" alt="">
+        <img class="icon2" src="../photoshopLayers/creative.png" alt="">
         <h4>Creative Designs</h4>
-        <img class="underline" src="../../photoshopLayers/underline.png" alt="">
-        <p class="column2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer egestas purus tortor, eu bibendum leo viverra quis. Sed at metus nec sem molestie cursus quis a velit.</p>
+        <img class="underline" src="../photoshopLayers/underline.png" alt="">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+        <p>Integer egestas purus tortor, eu bibendum leo viverra quis.</p>
+        <p>Sed at metus nec sem molestie cursus quis a velit.</p>
       </div>
 
       <div class="righty column">
-        <img class="icon3" src="../../photoshopLayers/support.png" alt="">
+        <img class="icon3" src="../photoshopLayers/support.png" alt="">
         <h4>100% Support</h4>
-        <img class="underline" src="../../photoshopLayers/underline.png" alt="">
-        <p class="column2"> Curabitur quis sapien justo. Aenean nec ante vitae metus tristique gravida ut a erat. Aenean tempus egestas urna, eu feugiat est interdum in.</p>
+        <img class="underline" src="../photoshopLayers/underline.png" alt="">
+        <p>Curabitur quis sapien justo. Aenean nec ante vitae metus</p>
+        <p>tristique gravida ut a erat. Aenean tempus egestas urna, eu</p>
+        <p>feugiat est interdum in.</p>
       </div>
     </div>
 
@@ -104,15 +112,16 @@
     </div>
   </section>
 
-  <section class="third">
+  <section class="city">
 
-    <div class="p3">
-      <h1 class="pride">We love our clients</h1>
-      <p class="pride">We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
+    <div class="pride">
+      <h1>We love our clients</h1>
+      <p>We take pride in delivering Intelligent Designs and Engaging Experiences for<br> clients all over the world.</p>
     </div>
+    <img class="play" src="../photoshopLayers/roundbutton.png" alt="">
   </section>
 
-  <section class="fourth">
+  <section class="what-we-do">
 
     <div class="details">
       <h1>Honor the details</h1>
@@ -121,7 +130,7 @@
 
   </section>
 
-  <section class="fifth">
+  <section class="global">
 
     <div class="fif">
       <h1>Global company with a local feel.</h1>
