finishing up the fourth section

--- a/index.html
+++ b/index.html
@@ -123,14 +123,44 @@
 
   <section class="what-we-do">
 
+    <div class="pencils">
+      <img class="pens" src="../photoshopLayers/pen-box.png" alt="">
+      <img src="../photoshopLayers/blackbox.png" alt="">
+    </div>
+  <div>
     <div class="details">
-      <h1>Honor the details</h1>
+      <h1>Honor</h1>
+      <h1>the details</h1>
       <p>For the global service design network</p>
+      <img class="number-two" src="../photoshopLayers/number2.png" alt="">
+      <img class="two-pencils" src="../photoshopLayers/pencils2.png" alt="">
+
+      <img class="prev-next" src="../photoshopLayers/03Frame.png" alt="">
+    </div>
+      <div class="bloc">
+        <h1>What we do</h1>
+        <p>Although BLOC occupies a rebel position within their</p>
+        <p>market of operations, their rebel nature was insufficiently</p>
+        <p>manifest in their existing online presence.</p>
+      </div>
+    <div class="campaign-photography">
+      <div class="campaign-creative">
+        <p>campaign creative</p>
+        <p>copy writing</p>
+        <p>product design</p>
+      </div>
+
+      <div class="photography">
+        <p>photography</p>
+        <p>3d/vfx/post</p>
+        <p>digital outdoor</p>
+      </div>
+    </div>
     </div>
 
   </section>
 
-  <section class="global">
+  <section class="winter">
 
     <div class="fif">
       <h1>Global company with a local feel.</h1>
