positioning things in the fifth section

--- a/index.html
+++ b/index.html
@@ -164,7 +164,9 @@
 
     <div class="fif">
       <h1>Global company with a local feel.</h1>
-      <h2>We help forward-thinking clients succeed in digital culture with work that invites active attention</h2>
+      <h2>We help forward-thinking clients succeed in digital culture</h2>
+      <h2>with work that invites active attention</h2>
+      <img class="black-line" src="../photoshopLayers/blackline.png" alt="">
       <p>What our customers are saying</p>
     </div>
 
